--- a/r/c/index.less
+++ b/r/c/index.less
@@ -1,6 +1,6 @@
 @import url(global.css);
 
-header{width:100%;height:45px;line-height:45px;background:#4B5056;position:fixed;color:#ccc;box-shadow:0 0 3px #666;}
+header{width:100%;height:45px;line-height:45px;background:#4B5056;position:fixed;color:#ccc;box-shadow:0 0 3px #666;z-index:100;}
 header h1{position:absolute;width:200px;left:50%;margin-left:-500px;font-size:18px;font-weight:normal;text-shadow:1px 1px 3px #111;}
 header h1 small{font-size:14px;color:#999;margin:0 10px;text-shadow:0 0 0;}
 header nav{position:absolute;display:block;left:50%;margin-left:-200px;}
@@ -13,15 +13,16 @@ nav li a:hover{color:#eaeaea;}
 .Demo h1{font-size:22px;}
 .Demo h2{font-size:18px;}
 .Demo h3{font-size:14px;}
-.Demo .viewCode{margin:10px 10px 20px;border:1px solid #ddd;border-radius:5px;background:#f1f1f1;position:relative;}
+.Demo .viewCode{margin:10px 10px 20px;border:1px solid #ddd;border-radius:5px;background:#f9f9f9;position:relative;}
 .Demo .viewCode:after{content:'\0020';display:block;clear:both;height:0;}
 .Demo .viewCode .example{height:auto;display:block;background:#fff;border-bottom:1px solid #e1e1e1;border-radius:5px 5px 0 0;padding:10px;}
-.Demo .viewCode textarea{width:50%;float:left;border:1px solid #fff;min-height:50px;max-height:100px;border-radius:0 0 0 5px;background:none;resize:none;}
-.Demo .viewCode p{width:45%;float:left;border-left:1px solid #e1e1e1;min-height:50px;max-height:100px;padding:3px;}
+.Demo .viewCode textarea{width:50%;float:left;border:1px solid #fff;height:170px;border-radius:0 0 0 5px;background:none;resize:none;font-size:14px;line-height:20px;color:#666;background:#fff;}
+.Demo .viewCode p{width:45%;float:left;border-left:1px solid #e1e1e1;height:170px;padding:3px;}
 .Demo .i-copy{color:#428bca;margin:1px 0 0 -26px;background:#fff;padding:2px;text-align:center;border-radius:0 0 0 5px;border-left:1px solid #e1e1e1;border-bottom:1px solid #e1e1e1;position:absolute;}
 .Demo .btn-clipboard-hover{color:#5bc0de;}
 .Demo .copyDone{color:#5cb85c;}
 .Demo .i-copy:after{content:"\f00c2";}
+.Demo .viewCode p{-webkit-user-select:text;-khtml-user-select:text;user-select:text}
 
 // Component
 
@@ -29,11 +30,31 @@ nav li a:hover{color:#eaeaea;}
 @green-act:#1DA758;
 @red:#E75F44;
 @red-act:#D2482C;
+@disable:#D1D5D8;
+@gray:#BDC3C7;
+@gray-act:#AFB4B7;
+@greenLine:#2BBC69;
+@greenLine-act:#1DA758;
 
+.border-radius(@radius){border-radius:@radius;-moz-border-radius:@radius;-webkit-border-radius:@radius;}
 
 /* button */
-.btn{display:inline-block;*display:inline;*zoom:1;width:180px;height:45px;line-height:45px;vertical-align:middle;text-align:center;border:none;cursor:pointer;background:@green;color:#fff;font-size:16px;border-radius:2px;}
-.btn:hover{opacity:.8;color:#fff;}
-.btn:active{background:@green-act;opacity:1;}
-.btn:focus{outline:none;} 
+.btn{display:inline-block;*display:inline;*zoom:1;width:180px;height:45px;line-height:45px;vertical-align:middle;text-align:center;border:none;cursor:pointer;background:@gray;color:#fff;font-size:16px;.border-radius(2px);}
+.btn:hover,.btn.hover{opacity:.8;color:#fff;}
+.btn:active,.btn.active{background:@gray-act;opacity:1;}
+.btn:focus,.btn.focus{outline:none;} 
+.btn-main{background:@green;}
+.btn-main:active,.btn-main.active{background:@green-act;opacity:1;}
+.btn-sub{background:#fff;border:1px solid @greenLine;color:@greenLine;margin:-1px;zoom:0.95;.border-radius(3px);}
+.btn-sub:hover,.btn-sub.hover{opacity:.8;color:@greenLine;}
+.btn-sub:active,.btn-sub.active{background:#fff;border-color:@greenLine-act;color:@greenLine-act;opacity:1;}
+.btn-hot{background:@red;}
+.btn-hot:active,.btn-hot.active{background:@red-act;opacity:1;}
+.btn-disable,.btn-disable:hover,.btn-disable.hover{background:@disable;opacity:1;cursor:default;}
+.btn-disable:active,.btn-disable.active{background:@disable;opacity:1;}
+
+.btn-l{width:180px;height:70px;line-height:70px;font-size:20px;}
+.btn-m{}
+.btn-s{width:180px;height:30px;line-height:30px;font-size:12px;}
 /** button states **/
+
