--- a/r/c/index.less
+++ b/r/c/index.less
@@ -9,20 +9,20 @@ nav li a{color:#ccc;}
 nav li a:hover{color:#eaeaea;}
 .wrap{height:100%;}
 .Demo{width:1000px;margin:0 auto;padding-top:50px;}
-.Demo h1,.Demo h2,.Demo h3,.Demo h4,.Demo h5,.Demo h6{line-height:200%;color:#333;border-bottom:1px solid #ccc;margin-bottom:20px;text-indent:20px;font-weight:normal;}
-.Demo h1{font-size:22px;}
-.Demo h2{font-size:18px;}
-.Demo h3{font-size:14px;}
+.Demo>h1,.Demo>h2,.Demo>h3,.Demo>h4,.Demo>h5,.Demo>h6{line-height:200%;color:#333;border-bottom:1px solid #ccc;margin-bottom:20px;text-indent:20px;font-weight:normal;}
+.Demo>h1{font-size:22px;}
+.Demo>h2{font-size:18px;}
+.Demo>h3{font-size:14px;}
 .Demo .viewCode{margin:10px 10px 20px;border:1px solid #ddd;border-radius:5px;background:#f9f9f9;position:relative;}
 .Demo .viewCode:after{content:'\0020';display:block;clear:both;height:0;}
 .Demo .viewCode .example{height:auto;display:block;background:#fff;border-bottom:1px solid #e1e1e1;border-radius:5px 5px 0 0;padding:10px;}
 .Demo .viewCode textarea{width:50%;float:left;border:1px solid #fff;height:170px;border-radius:0 0 0 5px;background:none;resize:none;font-size:14px;line-height:20px;color:#666;background:#fff;}
-.Demo .viewCode p{width:45%;float:left;border-left:1px solid #e1e1e1;height:170px;padding:3px;}
+.Demo .viewCode>p{width:45%;float:left;border-left:1px solid #e1e1e1;height:170px;padding:3px;}
 .Demo .i-copy{color:#428bca;margin:1px 0 0 -26px;background:#fff;padding:2px;text-align:center;border-radius:0 0 0 5px;border-left:1px solid #e1e1e1;border-bottom:1px solid #e1e1e1;position:absolute;}
 .Demo .btn-clipboard-hover{color:#5bc0de;}
 .Demo .copyDone{color:#5cb85c;}
 .Demo .i-copy:after{content:"\f00c2";}
-.Demo .viewCode p{-webkit-user-select:text;-khtml-user-select:text;user-select:text}
+.Demo .viewCode>p{-webkit-user-select:text;-khtml-user-select:text;user-select:text}
 
 // Component
 
@@ -35,12 +35,16 @@ nav li a:hover{color:#eaeaea;}
 @gray-act:#AFB4B7;
 @greenLine:#2BBC69;
 @greenLine-act:#1DA758;
+@heading:#33495F;
+@color-gray:#999999;
+@small:#808C9A;
 
+@bui:bui;
 .border-radius(@radius){border-radius:@radius;-moz-border-radius:@radius;-webkit-border-radius:@radius;}
 
 /* button */
 .btn{display:inline-block;*display:inline;*zoom:1;width:180px;height:45px;line-height:45px;vertical-align:middle;text-align:center;border:none;cursor:pointer;background:@gray;color:#fff;font-size:16px;.border-radius(2px);}
-.btn:hover,.btn.hover{opacity:.8;color:#fff;}
+.btn:hover,.btn.hover{opacity:.8;color:#fff;text-decoration:none;}
 .btn:active,.btn.active{background:@gray-act;opacity:1;}
 .btn:focus,.btn.focus{outline:none;} 
 .btn-main{background:@green;}
@@ -52,9 +56,27 @@ nav li a:hover{color:#eaeaea;}
 .btn-hot:active,.btn-hot.active{background:@red-act;opacity:1;}
 .btn-disable,.btn-disable:hover,.btn-disable.hover{background:@disable;opacity:1;cursor:default;}
 .btn-disable:active,.btn-disable.active{background:@disable;opacity:1;}
-
 .btn-l{width:180px;height:70px;line-height:70px;font-size:20px;}
 .btn-m{}
-.btn-s{width:180px;height:30px;line-height:30px;font-size:12px;}
-/** button states **/
+.btn-s{width:180px;height:30px;line-height:30px;font-size:14px;}
+
+/* headings */
+h1,h2,h3,h4,h5,h6{color:@heading;font-weight:400;line-height:180%;}
+h1{font-size:36px;}
+h2{font-size:30px;}
+h3{font-size:24px;}
+h4{font-size:18px;font-weight:600;}
+h5{font-size:14px;font-weight:600;}
+h6{font-size:13px;font-weight:600;}
+p{color:@heading;line-height:20px;}
+p.sub{color:@color-gray;}
+small{color:@small;}
+h1 small,h2 small,h3 small,h4 small,h5 small,h6 small{font-size:65%;font-weight:400;color:@color-gray;padding:0 1%;}
+a{color:@green;}
+a:hover{text-decoration:underline;}
+
+hr{border:none;border-bottom:1px solid #ccc;height:0;margin:10px 0;}
+hr.sub{border-bottom-color:#EDEDED;}
+
+
 
