--- a/r/c/index.less
+++ b/r/c/index.less
@@ -78,5 +78,10 @@ a:hover{text-decoration:underline;}
 hr{border:none;border-bottom:1px solid #ccc;height:0;margin:10px 0;}
 hr.sub{border-bottom-color:#EDEDED;}
 
+.paginator{}
+.paginator a{}
+.paginator a.on{}
+.paginator i{}
+
 
 
