--- a/r/c/bui.less
+++ b/r/c/bui.less
@@ -68,7 +68,7 @@ p.tipsBox{position:absolute;max-width:200px;line-height:20px;max-height:40px;pad
 p.tipsBox i{display:block;position:absolute;width:0;height:0;left:50%;bottom:0;margin:0 0 -5px -5px;border-width:5px 5px 0;border-color:transparent;border-top-color:@heading;border-style:solid;}
 
 /* dialog */
-.mask{width:100%;height:100%;position:absolute;top:0;left:0;background:#333;opacity:0.5;filter:alpha(opacity=50);z-index:100;}
+.mask{width:100%;height:100%;position:absolute;top:0;left:0;background:#333;opacity:0.5;filter:alpha(opacity=50);z-index:100;display:none;}
 /** dialog focus **/
 
 
