--- a/r/c/bui.less
+++ b/r/c/bui.less
@@ -16,6 +16,7 @@
 @heading:#33495F;
 @color-gray:#999999;
 @small:#808C9A;
+@border-ccc:#cccccc;
 
 @bui:bui;
 .border-radius(@radius){border-radius:@radius;-moz-border-radius:@radius;-webkit-border-radius:@radius;}
@@ -53,7 +54,7 @@ h1 small,h2 small,h3 small,h4 small,h5 small,h6 small{font-size:65%;font-weight:
 a{color:@green;}
 a:hover{text-decoration:underline;}
 
-hr{border:none;border-bottom:1px solid #ccc;height:0;margin:10px 0;}
+hr{border:none;border-bottom:1px solid @border-ccc;height:0;margin:10px 0;}
 hr.sub{border-bottom-color:#EDEDED;}
 
 .paginator{}
@@ -68,9 +69,32 @@ p.tipsBox{position:absolute;max-width:200px;line-height:20px;max-height:40px;pad
 p.tipsBox i{display:block;position:absolute;width:0;height:0;left:50%;bottom:0;margin:0 0 -5px -5px;border-width:5px 5px 0;border-color:transparent;border-top-color:@heading;border-style:solid;}
 
 /* dialog */
-.mask{width:100%;height:100%;position:absolute;top:0;left:0;background:#333;opacity:0.5;filter:alpha(opacity=50);z-index:100;display:none;}
+.mask{width:100%;height:100%;position:fixed;top:0;left:0;background:#333;opacity:0.7;filter:alpha(opacity=70);z-index:100;display:none;}
+body.dialogShow{overflow:hidden;padding-right:15px;}
+.dialog-focus{width:840px;height:600px;position:fixed;top:0px;left:50%;margin-left:-420px;background:#fff;.border-radius(5px);display:none;z-index:101;opacity:0;filter:alpha(opacity=0);box-shadow:0 5px 15px rgba(0,0,0,.5)}
+.dialog-focus-max{width:1000px;height:715px;}
+.dialog a.close{display:block;position:absolute;top:10px;right:10px;display:block;}
+.dialog a.i-prev{position:absolute;top:50%;left:15px;width:30px;height:30px;margin-top:-15px;}
+.dialog a.i-next{position:absolute;top:50%;right:15px;width:30px;height:30px;margin-top:-15px;}
+.dialog a:hover{opacity:.8;}
+.testReportList{width:740px;height:500px;margin:60px auto 0;overflow:hidden;}
+.testReportList ul{float:left;position:relative;width:10000px;}
+.testReportList ul:after{content:'\0020';display:block;clear:both;height:0;}
+.testReportList li{float:left;width:348px;height:498px;border:1px solid @border-ccc;margin:0 10px;}
+.testReportList li img{width:348px;}
+.testReportList-page{text-align:center;padding:10px;}
+.testReportList-page i{display:inline-block;*display:inline;*zoom:1;width:8px;height:8px;overflow:hidden;.border-radius(4px);background:@border-ccc; margin:3px; }
+.testReportList-page i.on{background:@green;}
 /** dialog focus **/
 
+/* icon */
+.icon{display:inline-block;*display:inline;*zoom:1;width:16px;height:16px;background-image:url(../i/icon2x.png);background-repeat:no-repeat;}
+.i-close{background-position:-146px -9px;}
+.i-prev{background-position:-50px -50px;}
+.i-next{background-position:-50px -2px;}
+.i-prev-disabled{background-position:-98px -51px;cursor:default;}
+.i-next-disabled{background-position:-98px -3px;cursor:default;}
+.dialog a.i-prev-disabled:hover,.dialog a.i-next-disabled:hover{opacity:1;}
 
 
 
