--- a/r/c/bui.less
+++ b/r/c/bui.less
@@ -71,25 +71,34 @@ p.tipsBox i{display:block;position:absolute;width:0;height:0;left:50%;bottom:0;m
 /* dialog */
 .mask{width:100%;height:100%;position:fixed;top:0;left:0;background:#333;opacity:0.7;filter:alpha(opacity=70);z-index:100;display:none;}
 body.dialogShow{overflow:hidden;padding-right:15px;}
-.dialog-focus{width:840px;height:600px;position:fixed;top:0px;left:50%;margin-left:-420px;background:#fff;.border-radius(5px);display:none;z-index:101;opacity:0;filter:alpha(opacity=0);box-shadow:0 5px 15px rgba(0,0,0,.5)}
+.dialog{position:fixed;top:0;left:50%;background:#fff;background:#fff;.border-radius(5px);display:none;z-index:101;opacity:0;filter:alpha(opacity=0);box-shadow:0 5px 15px rgba(0,0,0,.5)}
+.dialog{
+	h2{font-size:18px;padding:0 10px;}
+	.dialog-content{padding:0 10px;}
+	a.close{display:block;position:absolute;top:10px;right:10px;display:block;background:url(../i/testRep.png) 0 -40px no-repeat;}
+	a.i-prev{position:absolute;top:50%;left:-20px;width:30px;height:30px;margin-top:-15px;opacity:0}
+	a.i-next{position:absolute;top:50%;right:-20px;width:30px;height:30px;margin-top:-15px;opacity:0}
+	a:hover{opacity:.8;}
+}
+
+#dialog-focus{width:840px;height:600px;margin-left:-420px;}
+#dialog-focus h2{width:170px;height:20px;background:url(../i/testRep.png) no-repeat;position:absolute;top:20px;left:50%;margin-left:-85px;padding:0;}
 .dialog-focus-max{width:1000px;height:715px;}
-.dialog a.close{display:block;position:absolute;top:10px;right:10px;display:block;}
-.dialog a.i-prev{position:absolute;top:50%;left:15px;width:30px;height:30px;margin-top:-15px;}
-.dialog a.i-next{position:absolute;top:50%;right:15px;width:30px;height:30px;margin-top:-15px;}
-.dialog a:hover{opacity:.8;}
+
 .testReportList{width:740px;height:500px;margin:60px auto 0;overflow:hidden;}
 .testReportList ul{float:left;position:relative;width:10000px;}
 .testReportList ul:after{content:'\0020';display:block;clear:both;height:0;}
-.testReportList li{float:left;width:348px;height:498px;border:1px solid @border-ccc;margin:0 10px;}
+.testReportList li{float:left;width:348px;height:498px;border:1px solid @border-ccc;margin:0 10px;overflow:hidden;}
 .testReportList li img{width:348px;}
-.testReportList-page{text-align:center;padding:10px;}
+.testReportList li.hover img{width:auto;}
+.testReportList-page{text-align: center;position: absolute;width: 600px;bottom: -8px;left: 50%;margin-left: -300px;opacity:0;}
 .testReportList-page i{display:inline-block;*display:inline;*zoom:1;width:8px;height:8px;overflow:hidden;.border-radius(4px);background:@border-ccc; margin:3px; }
 .testReportList-page i.on{background:@green;}
 /** dialog focus **/
 
 /* icon */
 .icon{display:inline-block;*display:inline;*zoom:1;width:16px;height:16px;background-image:url(../i/icon2x.png);background-repeat:no-repeat;}
-.i-close{background-position:-146px -9px;}
+
 .i-prev{background-position:-50px -50px;}
 .i-next{background-position:-50px -2px;}
 .i-prev-disabled{background-position:-98px -51px;cursor:default;}
